--- a/Password Manager/Views/MainWindow.axaml
+++ b/Password Manager/Views/MainWindow.axaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" 
-        Width="500" Height="1000" Padding="1"
+        Width="500" Height="300" Padding="1"
         x:Class="Password_Manager.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
@@ -17,18 +17,19 @@
     </Design.DataContext>
     
     <Grid>
-        <!-- Top Bar -->
-        <DockPanel Background="#111" Height="50" Margin="0,0,0,5">
-            <TextBlock Text="All" Foreground="White" FontSize="16" VerticalAlignment="Center" Margin="10,0,0,0" DockPanel.Dock="Left" />
-            <TextBlock Text="{Binding PasswordEntries.Count}" Foreground="Gray" FontSize="12" VerticalAlignment="Center" Margin="10,0,0,0" DockPanel.Dock="Left" />
-            <Button Content="+" Width="30" Height="30" Background="Transparent" Foreground="White" BorderThickness="0" DockPanel.Dock="Right" />
-        </DockPanel>
+        
+        <StackPanel Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,10">
+            
+        </StackPanel>
     
         <!-- Password List -->
-        <ListBox ItemsSource="{Binding PasswordEntries}" Background="#222" BorderThickness="0">
+        <ListBox  ItemsSource="{Binding PasswordEntries}" Background="#222" BorderThickness="10">
+            
             <ListBox.ItemTemplate>
+                
                 <DataTemplate>
-                    <Border BorderThickness="0" Padding="10">
+                    <Border BorderThickness="1" Padding="10">
+                        
                         <StackPanel Orientation="Horizontal" Spacing="10">
                         
                             <StackPanel>
