--- a/Password Manager/Views/MainWindow.axaml
+++ b/Password Manager/Views/MainWindow.axaml
@@ -4,46 +4,34 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" 
-        Width="500" Height="300" Padding="1"
         x:Class="Password_Manager.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
-        Icon="/Assets/avalonia-logo.ico"
-        Title="Password Manager">
-
+        Title="Password Manager" Width="500" Height="400">
     <Design.DataContext>
-        <!-- This only sets the DataContext for the previewer in an IDE,
-             to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
         <vm:MainWindowViewModel/>
     </Design.DataContext>
-    
-    <Grid>
-        
-        <StackPanel Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,10">
-            
+    <Grid RowDefinitions="Auto,*">
+        <!-- Top bar with Add button -->
+        <StackPanel Orientation="Horizontal" Margin="10" Grid.Row="0">
+            <Button Content="+" Command="{Binding AddEntryCommand}" Width="30" Height="30" />
+            <TextBlock Text="Add new entry" VerticalAlignment="Center" Margin="10,0,0,0" Foreground="White"/>
         </StackPanel>
     
         <!-- Password List -->
-        <ListBox  ItemsSource="{Binding PasswordEntries}" Background="#222" BorderThickness="10">
-            
+        <ListBox ItemsSource="{Binding PasswordEntries}" Background="#222" Grid.Row="1">
             <ListBox.ItemTemplate>
-                
                 <DataTemplate>
-                    <Border BorderThickness="1" Padding="10">
-                        
+                    <!-- In this version, we use the PointerPressed event on the Border to trigger editing -->
+                    <Border BorderThickness="1" Padding="10" PointerPressed="OnEntryClicked">
                         <StackPanel Orientation="Horizontal" Spacing="10">
-                        
                             <StackPanel>
                                 <TextBlock Text="{Binding ServiceName}" Foreground="White" FontSize="14" />
                                 <TextBlock Text="{Binding Username}" Foreground="Gray" FontSize="12" />
                             </StackPanel>
-                        
-                            <!-- Warning Icon (if applicable) -->
                         </StackPanel>
                     </Border>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
     </Grid>
-
-
 </Window>
