--- a/Password Manager/Views/EditEntryWindow.axaml
+++ b/Password Manager/Views/EditEntryWindow.axaml
@@ -15,8 +15,8 @@
         <TextBox Text="{Binding EncryptedPassword}" />
     
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0" Spacing="10">
-            <Button Content="Save" Width="100" Click="Save_Click"/>
-            <Button Content="Cancel" Width="100" Click="Cancel_Click"/>
+            <Button Content="Save" Width="100" Click="SaveClick"/>
+            <Button Content="Cancel" Width="100" Click="CancelClick"/>
         </StackPanel>
     </StackPanel>
 </Window>
